--- a/_posts/2021-09-12-Interview_20210912.md
+++ b/_posts/2021-09-12-Interview_20210912.md
@@ -17,12 +17,14 @@ comments:          true
 ### 기술적 질문
 
  - Process와 Methode의 차이를 설명해주세요
+    - hello world
 
  - Override와 Overload의 차이를 설명해주세요
 
 ### 인적성 질문
  
  - 왜 이직을 결심하게 되었나요?
+    - 경력으로 이직할때 모든 회사가 물어본 질문이다.
 
  - 우리 회사 및 이 직무에 지원한 동기가 무엇인가요?
 
@@ -53,6 +55,8 @@ comments:          true
  - 당신을 힘들게 했던 상사가 있나요?
 
  - 기억에 남는 문의사항이 있나요?
+
+ - 입사 가능일이 언제인가요?
 
 ### 자소서 내 질문
 
