--- a/_posts/2021-09-12-Interview_20210912.md
+++ b/_posts/2021-09-12-Interview_20210912.md
@@ -16,10 +16,22 @@ comments:          true
 
 ### 기술적 질문
 
- - Process와 Methode의 차이를 설명해주세요
-    - hello world
+ - Process와 Thread의 차이를 설명해주세요
+    - 프로세스는 운영체제로부터 자원을 할당받는 작업의 단위이며, 스레드는 할당된 자원을 이용하는 실행 단위입니다. 제가 하는 업무로 예시를 들면 Zabbix Server가 프로세스가 되는 것이고, 내부의 history collector, trends collector, DB connection가 스레드라고 볼 수 있습니다.
+
+ - Multi Process와 Multi Thread를 알고 있나요? 장단점을 설명해주세요
+    - 하나의 프로그램에 여러개의 프로세스로 구성하여 각 프로세스가 하나의 task를 처리하는 방식입니다. 장점은 하나의 프로세스가 잘못되어도 프로그램이 작동하는 것이고 단점으로 context가 switch 될 때마다 비용이 발생합니다. Multi thread 는 프로그램을 여러개의 쓰레드로 구성하고 각 쓰레드가 task를 처리하는 방식입니다. 장점으로는 시스템 자원 소모가 감소되고 처리 비용이 감소되어 실행 속도가 향상되며 stack을 활용하여 스레드간 자원 공유를 할 수 있습니다. 단점으로는 디버깅이 어렵고 동기화에서 이슈가 발생할 수 있으며 하나의 쓰레드의 오류가 전체 프로세스에 영향을 줄 수 있습니다.
+
+ - Thread의 개수 설정을 어떻게 하나요
+    - 리틀의 법칙을 활용하여 할당 할 수 있는 자원 = 처리속도 * 체류시간 * thread의 개수를 활용하여 설정할 수 있습니다.
 
  - Override와 Overload의 차이를 설명해주세요
+    - Overload는 같은 메소드 명이지만 리턴 타입, 파라미터 타입, 수를 수정하는 것을 말하는 것이고, Override는 메소드의 리턴 타입, 파라미터 타입, 수도 같지만 동작을 재정의하는 것을 말합니다.
+
+
+ - 비동기 프로그래밍이 무엇이고 장단점으로 설명해주세요
+
+ - 
 
 ### 인적성 질문
  
