--- a/_posts/2021-09-12-Interview_20210912.md
+++ b/_posts/2021-09-12-Interview_20210912.md
@@ -73,6 +73,8 @@ comments:          true
 ### 자소서 내 질문
 
  - 제일 최근 프로젝트에선 개발자의 역할로 참여하신게 아니네요?
+    > 비록 개발자의 역할로서 참여하지 않았지만 다른 역할로 프로젝트를 경험하면서 배운 부분들에 대해 설명하고 이것이 어떻게 지원한 직무에 도움이 되는지로 귀결하자
+    - 안녕하세요, 케케케
 
  - 해당 프로젝트는 (Java) 개발자로 참여한 것이 아니네요?
 
@@ -92,7 +94,8 @@ comments:          true
 
  - 인증 관련된 개발을 하신 적이 있나요?
 
- - 기술적 이슈나 업무적 이슈, 관계적 이슈를 해결했던 예시가 있나요? 
+ - 기술적 이슈나 업무적 이슈, 관계적 이슈를 해결했던 예시가 있나요?
+    > 
 
 ### 면접볼 때 고쳐야할 태도 정리
 
@@ -109,7 +112,4 @@ comments:          true
  6) 내가 제출한 경력 소개서는 면접 들어가기 전 다시 보고 숙지하자.
 
  7) 제출한 프로젝트 내에서 꼭 한가지는 어떤 역할을 맡았는지 물어본다. 모든 프로젝트에 대해 내용 및 역할 물어보면 바로 나올 수 있게 정리하자.
-
- 8) 
-
 
