--- a/_posts/2021-09-12-Interview_20210912.md
+++ b/_posts/2021-09-12-Interview_20210912.md
@@ -73,12 +73,11 @@ comments:          true
 ### 자소서 내 질문
 
  - 제일 최근 프로젝트에선 개발자의 역할로 참여하신게 아니네요?
-    > 비록 개발자의 역할로서 참여하지 않았지만 다른 역할로 프로젝트를 경험하면서 배운 부분들에 대해 설명하고 이것이 어떻게 지원한 직무에 도움이 되는지로 귀결하자
+    >> 비록 개발자의 역할로서 참여하지 않았지만 다른 역할로 프로젝트를 경험하면서 배운 부분들에 대해 설명하고 이것이 어떻게 지원한 직무에 도움이 되는지로 귀결하자
     - 안녕하세요, 케케케
 
- - 해당 프로젝트는 (Java) 개발자로 참여한 것이 아니네요?
-
  - 웹 개발에 대한 경험은 없으신가요?
+    > 애플리케이션 Back-end 개발자라고만 자소서에 작성하여 Android 개발자와 혼동을 하시는 면접관들이 종종 계신다. 웹 개발은 관리자 포탈만 해봤지만 하이브리드 애플리케이션의 Back-end 개발자로서 웹 개발의 Back-end 부분은 다를 바가 크게 없으며 시스템 업무 중에 인원이 부족하면 종종 Javascript/JQuery를 활용한 Front-end 개발도 해봐서 적응하는 데에 큰 지장이 없음을 말씀드린다.
 
  - 마이그레이션한 작업에 대해 설명해주세요.
 
@@ -96,6 +95,8 @@ comments:          true
 
  - 기술적 이슈나 업무적 이슈, 관계적 이슈를 해결했던 예시가 있나요?
     > 
+
+ - 코딩테스트에 대한 결과물은 만족하시나요?
 
 ### 면접볼 때 고쳐야할 태도 정리
 
