--- a/_posts/2021-09-12-Interview_20210912.md
+++ b/_posts/2021-09-12-Interview_20210912.md
@@ -80,6 +80,7 @@ comments:          true
     > 애플리케이션 Back-end 개발자라고만 자소서에 작성하여 Android 개발자와 혼동을 하시는 면접관들이 종종 계신다. 웹 개발은 관리자 포탈만 해봤지만 하이브리드 애플리케이션의 Back-end 개발자로서 웹 개발의 Back-end 부분은 다를 바가 크게 없으며 시스템 업무 중에 인원이 부족하면 종종 Javascript/JQuery를 활용한 Front-end 개발도 해봐서 적응하는 데에 큰 지장이 없음을 말씀드린다.
 
  - 마이그레이션한 작업에 대해 설명해주세요.
+ > 데이터 마이그레이션 
 
  - SQL이나 DB 작업은 직접하신 경험이 있나요?
 
