--- a/_posts/2021-09-12-Interview_20210912.md
+++ b/_posts/2021-09-12-Interview_20210912.md
@@ -73,32 +73,35 @@ comments:          true
 ### 자소서 내 질문
 
  - 제일 최근 프로젝트에선 개발자의 역할로 참여하신게 아니네요?
-   > 비록 개발자의 역할로서 참여하지 않았지만 다른 역할로 프로젝트를 경험하면서 배운 부분들에 대해 설명하고 이것이 어떻게 지원한 직무에 도움이 되는지로 귀결하자
-    - 안녕하세요, 케케케
-       > 흐음, 테스트12
+    > 비록 개발자의 역할로서 참여하지 않았지만 다른 역할로 프로젝트를 경험하면서 배운 부분들에 대해 설명하고 이것이 어떻게 지원한 직무에 도움이 되는지로 귀결하자
+       - Hello World
 
  - 웹 개발에 대한 경험은 없으신가요?
     > 애플리케이션 Back-end 개발자라고만 자소서에 작성하여 Android 개발자와 혼동을 하시는 면접관들이 종종 계신다. 웹 개발은 관리자 포탈만 해봤지만 하이브리드 애플리케이션의 Back-end 개발자로서 웹 개발의 Back-end 부분은 다를 바가 크게 없으며 시스템 업무 중에 인원이 부족하면 종종 Javascript/JQuery를 활용한 Front-end 개발도 해봐서 적응하는 데에 큰 지장이 없음을 말씀드린다.
 
  - 마이그레이션한 작업에 대해 설명해주세요.
- > 데이터 마이그레이션 
+    > 데이터 마이그레이션과 소스 마이그레이션 중 본인이 한 마이그레이션은 소스 마이그레이션인 것에 대해 말씀드린다. 
 
- - SQL이나 DB 작업은 직접하신 경험이 있나요?
+ - SQL이나 DB 작업은 직접하신 경험이 있나요?  
 
  - 쿼리에 대하여 플랜을 확인하고 개선을 하실 수 있나요?
 
- - EAI 연동에 대한 개념을 이해했다고 했는데 어떻게 연동 했으며, 개념에 대해 설명해주세요
+ - EAI 연동에 대한 개념을 이해했다고 했는데 어떻게 연동 했으며, 개념에 대해 설명해주세요.
+    > 아모레 면세 설문 조사 애플리케이션 개발 땐 API를 통한 EAI 연동을 하였고 이니스프리 운영 업무를 맞으며 DB를 통한 EAI 연동 경험이 있음을 말씀드리고, 절차를 조금 더 상세히 설명한다.
 
  - EAI 연동 시에 인증 절차가 있었나요?
 
  - 대규모 시스템을 경험한 적이 있나요?
+    > ADT 고객센터 애플리케이션에서 대규모 트래픽을 경험한 적 있으며, 현대 카/캐/커 프로젝트에서는 개발자로서 참여한 것은 아니지만 프로젝트가 진행되는 절차에 대해 경험한 것을 설명한다.
 
  - 인증 관련된 개발을 하신 적이 있나요?
+    > B2B 앱을 운영하며 인증번호를 통한 절차, 결제 진행 전 NICE 인증 모듈을 활용한 인증 절차, 개인 공부를 통해서 토큰을 통한 인증 절차를 경험한 것을 설명한다. 
 
  - 기술적 이슈나 업무적 이슈, 관계적 이슈를 해결했던 예시가 있나요?
-    > 
+    > 묻는 의도는 어려운 문제를 어떻게 접근했는지를 확인하는 것으로 보인다. 기술적으로 설명했을때 표정이 안좋은 것으로 보아 다음엔 가볍게 답변할 예정이다.
 
  - 코딩테스트에 대한 결과물은 만족하시나요?
+    > 시간이 많이 부족해서 만족스럽진 않았고 만약 실제 업무라면 더 많은 테스트 케이스를 시나리오를 만들고 시간을 투자해 만족스러운 결과를 만들때까지 고민할 것이다라고 답변하자. 
 
 ### 면접볼 때 고쳐야할 태도 정리
 
