--- a/_posts/2021-09-12-Interview_20210912.md
+++ b/_posts/2021-09-12-Interview_20210912.md
@@ -74,15 +74,18 @@ comments:          true
 
  - 제일 최근 프로젝트에선 개발자의 역할로 참여하신게 아니네요?
     > 비록 개발자의 역할로서 참여하지 않았지만 다른 역할로 프로젝트를 경험하면서 배운 부분들에 대해 설명하고 이것이 어떻게 지원한 직무에 도움이 되는지로 귀결하자
-    - 네, 맞습니다.
+    - 네, 맞습니다. 하지만 OOOO 프로젝트를 Zabbix 개발자로 참여하면서 OS, Network같은 인프라 지식을 많이 배울 수 있었고 고객과의 커뮤니케이션 능력을 키울 수 있었습니다. 또한, 대기업인 kt ds의 체계적인 업무 프로세스를 배울 수 있었습니다. 이러한 경험은 개발자로서의 경험만큼 중요한 지식이라 생각합니다.
 
  - 웹 개발에 대한 경험은 없으신가요?
     > 애플리케이션 Back-end 개발자라고만 자소서에 작성하여 Android 개발자와 혼동을 하시는 면접관들이 종종 계신다. 웹 개발은 관리자 포탈만 해봤지만 하이브리드 애플리케이션의 Back-end 개발자로서 웹 개발의 Back-end 부분은 다를 바가 크게 없으며 시스템 업무 중에 인원이 부족하면 종종 Javascript/JQuery를 활용한 Front-end 개발도 해봐서 적응하는 데에 큰 지장이 없음을 말씀드린다.
+    - 모든 애플리케이션을 개발할때 관리자 포탈을 구축하게 됩니다. 모빌씨앤씨에서 제공하는 기본 관리자 포탈에서 고객이 커스텀마이즈를 원할 때, 웹 개발을 진행했습니다. 또한, 애플리케이션 Back-end 개발에 대해서도 하이브리드 앱으로 개발을 하였기에 제가 맡은 업무는 웹의 백엔드를 개발한 것과 비슷했습니다. 또한 시스템을 운영할때 경우에 따라서 인원이 부족하면 Front-end 개발자 역할도 맡아 Javascript/JQuery 활용하여 개발한 경험이 있기에 웹 개발에도 자신 있습니다.
 
  - 마이그레이션한 작업에 대해 설명해주세요.
-    > 데이터 마이그레이션과 소스 마이그레이션 중 본인이 한 마이그레이션은 소스 마이그레이션인 것에 대해 말씀드린다. 
+    > 데이터 마이그레이션과 소스 마이그레이션 중 본인이 한 마이그레이션은 소스 마이그레이션인 것에 대해 말씀드린다.
+    - 현대 카/캐/커 프로젝트를 진행할 땐, Tivoli의 관제 설정을 분석하고 Zabbix의 설정으로 마이그레이션 하였으며, ADT Caps 주제어 장치 확인 애플리케이션을 개발 했을 땐, java 버전과 비즈몹 프레임워크에 맞게 소스를 마이그레이션 했습니다.
 
- - SQL이나 DB 작업은 직접하신 경험이 있나요?  
+ - SQL이나 DB 작업은 직접하신 경험이 있나요?
+    - 
 
  - 쿼리에 대하여 플랜을 확인하고 개선을 하실 수 있나요?
 
