--- a/_posts/2021-09-12-Interview_20210912.md
+++ b/_posts/2021-09-12-Interview_20210912.md
@@ -85,26 +85,30 @@ comments:          true
     - 현대 카/캐/커 프로젝트를 진행할 땐, Tivoli의 관제 설정을 분석하고 Zabbix의 설정으로 마이그레이션 하였으며, ADT Caps 주제어 장치 확인 애플리케이션을 개발 했을 땐, java 버전과 비즈몹 프레임워크에 맞게 소스를 마이그레이션 했습니다.
 
  - SQL이나 DB 작업은 직접하신 경험이 있나요?
-    - 
+    - 네, 시스템 운영 및 개발 시 애플리케이션이 운영되는데 필요한 데이터가 들어있는 DB에 대해선 직접 관리까지 하였고 고객사의 데이터가 들어있는 레거시 DB에 대해선 개발 요청 및 요구사항이 오면 해당 데이터를 추출하는데 필요한 테이블과 컬럼의 명세서를 받아서 쿼리를 작성하고 DBA에게 확인 받는 절차로 개발하였습니다. 
 
  - 쿼리에 대하여 플랜을 확인하고 개선을 하실 수 있나요?
+    - 네, 이전 아모레퍼시픽의 아리따움 앱에서 물건별 실적 조회와 하이트 앱에서 주소 조회에서 속도 개선이 필요하여 Sql developer란 툴을 활용하여 where절의 조건의 순서를 수정한다던가 힌트 구문을 활용하여 개선한 경험이 있습니다.
 
  - EAI 연동에 대한 개념을 이해했다고 했는데 어떻게 연동 했으며, 개념에 대해 설명해주세요.
     > 아모레 면세 설문 조사 애플리케이션 개발 땐 API를 통한 EAI 연동을 하였고 이니스프리 운영 업무를 맞으며 DB를 통한 EAI 연동 경험이 있음을 말씀드리고, 절차를 조금 더 상세히 설명한다.
-
- - EAI 연동 시에 인증 절차가 있었나요?
+    - 아모레퍼시픽 면세 설문조사 애플리케이션에서는 jco 라이브러리를 활용하여 EAI 커넥터를 빈으로 등록하였고 빈의 내부 파라미터에 인증에 필요한 데이터를 추가하는 형식으로 연동하였습니다. 아모레퍼시픽 이니스프리 애플리케이션에서는 DB에 EAI 연동 테이블을 생성하고 트리거 및 프로시저를 활용하여 연동하였습니다. 
 
  - 대규모 시스템을 경험한 적이 있나요?
     > ADT 고객센터 애플리케이션에서 대규모 트래픽을 경험한 적 있으며, 현대 카/캐/커 프로젝트에서는 개발자로서 참여한 것은 아니지만 프로젝트가 진행되는 절차에 대해 경험한 것을 설명한다.
+    - 데이터 및 트래픽으로는 B2C인 ADT Caps 고객센터 애플리케이션이 제일 많았고, 프로젝트 단위로는 현대 카캐커 ESM 시스템 구축이 가장 컸습니다. ADT 고객센터의 경우 잠금을 해제하거나 잠금할때 푸시를 날리는 기능이 있는데 오전 7~8시 경에 푸시 요청이 한번에 들어와 푸시가 늦게 오는 현상이 발생되었습니다. 이를 해결하기 위해 푸쉬 서버를 증설했으며 소스상으론 민감했던 금융쪽 고객이나 기업 고객과 일반 고객을 나눠서 각각의 푸쉬 서버에 요청하는 형식으로 수정하였습니다.
 
  - 인증 관련된 개발을 하신 적이 있나요?
-    > B2B 앱을 운영하며 인증번호를 통한 절차, 결제 진행 전 NICE 인증 모듈을 활용한 인증 절차, 개인 공부를 통해서 토큰을 통한 인증 절차를 경험한 것을 설명한다. 
+    > B2B 앱을 운영하며 인증번호를 통한 절차, 결제 진행 전 NICE 인증 모듈을 활용한 인증 절차, 개인 공부를 통해서 토큰을 통한 인증 절차를 경험한 것을 설명한다.
+    - B2B 앱을 로그인할때 관리자가 부여하는 인증번호를 입력해야 하는 절차를 통한 인증 개발을 한적이 있고, 결재 진행 전 NICE 인증 모듈과 연동하여 인증하는 개발을 한 적있으며, 개인 프로젝트에서 JWT(Json Web token)를 활용한 스프링 기능을 활용한 인증 개발한 경험이 있습니다.
 
  - 기술적 이슈나 업무적 이슈, 관계적 이슈를 해결했던 예시가 있나요?
     > 묻는 의도는 어려운 문제를 어떻게 접근했는지를 확인하는 것으로 보인다. 기술적으로 설명했을때 표정이 안좋은 것으로 보아 다음엔 가볍게 답변할 예정이다.
+    - 이전에 이니스프리 앱의 PM을 맡으며 고객과 커뮤니케이션을 할 때, 서로 잘못 이해해서 진행에 어려움을 겪은 경험이 있습니다. 그 이후부턴 대화 시엔 고객이 말한 내용 한번 더 정리하여 해당 내용이 맞는지 확인하거나 메일을 통해 유선상으로 진행되었던 내용을 정리하여 전달하는 습관을 길렀고 그 후부턴 예전보다 잘못 이해하는 일이 줄었습니다.
 
  - 코딩테스트에 대한 결과물은 만족하시나요?
-    > 시간이 많이 부족해서 만족스럽진 않았고 만약 실제 업무라면 더 많은 테스트 케이스를 시나리오를 만들고 시간을 투자해 만족스러운 결과를 만들때까지 고민할 것이다라고 답변하자. 
+    > 시간이 많이 부족해서 만족스럽진 않았고 만약 실제 업무라면 더 많은 테스트 케이스를 시나리오를 만들고 시간을 투자해 만족스러운 결과를 만들때까지 고민할 것이다라고 답변하자.
+    - 아니요, 만족스럽지 않았습니다. 시간이 한정된 상황에서 결과가 나오는 것에만 치중하고 테스트 케이스 시나리오를 충분히 하지 못하였습니다. 실제 업무에서는 보다 더 효율적인 알고리즘과 많은 테스트 케이스를 활용할 것입니다.
 
 ### 면접볼 때 고쳐야할 태도 정리
 
