add interview content

--- a/_posts/2021-09-12-Interview_20210912.md
+++ b/_posts/2021-09-12-Interview_20210912.md
@@ -36,13 +36,19 @@ comments:          true
 ### 인적성 질문
  
  - 왜 이직을 결심하게 되었나요?
-    - 경력으로 이직할때 모든 회사가 물어본 질문이다.
+    - 경력으로 이직할때 모든 회사가 물어본 질문이다. 이직 결심과 지원 동기가 동일하니 이 질문에 동기를 포함시켜 답변을 하자.
+    - 커리어패스를 조금 더 개발자로 중점을 두고 싶어서 이직을 결심하게 되었습니다. 현재 관제 솔루션 엔지니어로서 인프라 지식을 쌓았고 6개월이 넘는 시간동안 진행된 큰 프로젝트에 참여하여 대규모 프로젝트의 프로세스를 옆에서 보고 배웠습니다. 이전 회사에서 배웠던 개발 지식과 현재 회사에서 경험한 것들을 토대로 이번에 지원한 직무에서 잘적응하고 만족스런 커리어패스를 쌓을 수 있을것이라 생각하여 이직 및 해당 직무에 지원하게 되었습니다. 
 
  - 우리 회사 및 이 직무에 지원한 동기가 무엇인가요?
+    - 앞서 한 질문에 해당 내용을 담았기 때문에 한말이 없어진다. 전 질문에서 해당 질문을 답변을 한 것을 확실히 인식시켜 물어보지 말게 만들자
 
  - 본인의 Java 실력은 어디라고 생각하시나요?
+    - 지원 요건에 써있는대로 답변하자. 만약 써있지 않다면 난 3~4년 사이로 이직하고 싶으니 중이라 대답하자
+    - 저의 Java 실력은 중 정도로 생각합니다. 이전 회사에서 2년 반정도 되는 기간동안 다양한 고객사와 애플리케이션을 운영하며 문의응대 및 추가개발을 하였고, 3건 정도의 SI를 메인 Back-end 개발자로서 업무를 수행하며 Java에 익숙한 상태입니다. 하지만 여전히 프로그래밍은 발전하고 있으며, 그것을 새롭게 계속익혀야 하기에 중이라 생각합니다. 
 
  - 프로젝트 중 가장 기억에 남은 프로젝트는?
+    - 실제로도 개발적으로 제일 많이 배운 ADT Caps 출동대원 애플리케이션을 업급하자
+    - Hello World
 
  - 본인이 참여한 프로젝트에서 실패한 경험이 있나요?
 
@@ -125,4 +131,3 @@ comments:          true
  6) 내가 제출한 경력 소개서는 면접 들어가기 전 다시 보고 숙지하자.
 
  7) 제출한 프로젝트 내에서 꼭 한가지는 어떤 역할을 맡았는지 물어본다. 모든 프로젝트에 대해 내용 및 역할 물어보면 바로 나올 수 있게 정리하자.
-
