--- a/_posts/2021-09-12-Interview_20210912.md
+++ b/_posts/2021-09-12-Interview_20210912.md
@@ -35,6 +35,9 @@ comments:          true
 
 ### 인적성 질문
  
+ - 1분 자기소개 진행해주세요
+    - 저는 어렸을때부터 잦은 이사와 해외 경험을 통해 새로운 것을 받아드리고 도전하는 것에 대해 익숙하고 적응력이 빠른 편입니다. 또한, 약 2년 6개월 간 Back-end 개발자, 4개월 간 빅데이터 시스템 TA, 약 1년 6개월의 관제 솔루션 엔지니어로서의 업무를 맡으며 IT 분야에서도 다양한 역할을 수행하였습니다. 이런 경험을 통해서 업무에 빠르게 적응하고 다양한 직군의 동료들에게 서로의 어려움을 이해하고 협업하는 그런 개발자가 되겠습니다. 감사합니다.
+
  - 왜 이직을 결심하게 되었나요?
     - 경력으로 이직할때 모든 회사가 물어본 질문이다. 이직 결심과 지원 동기가 동일하니 이 질문에 동기를 포함시켜 답변을 하자.
     - 커리어패스를 조금 더 개발자로 중점을 두고 싶어서 이직을 결심하게 되었습니다. 현재 관제 솔루션 엔지니어로서 인프라 지식을 쌓았고 6개월이 넘는 시간동안 진행된 큰 프로젝트에 참여하여 대규모 프로젝트의 프로세스를 옆에서 보고 배웠습니다. 이전 회사에서 배웠던 개발 지식과 현재 회사에서 경험한 것들을 토대로 이번에 지원한 직무에서 잘적응하고 만족스런 커리어패스를 쌓을 수 있을것이라 생각하여 이직 및 해당 직무에 지원하게 되었습니다. 
